tests/baselines/reference/chainedImportAlias.errors.txt
chainedImportAlias_file0.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== chainedImportAlias_file1.ts (0 errors) ====
    import x = require('./chainedImportAlias_file0');
    import y = x;
    y.m.foo();
    
==== chainedImportAlias_file0.ts (1 errors) ====
    export module m {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function foo() { }
    }
    